<resources>
    <string name="app_name">E-asy</string>
    <string name="app_description">Todo lo que necesitas en E-commerce fácil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_data_fragment">Go to Data Fragment</string>
    <string name="already_have_account">Ya tengo una cuenta</string>
    <string name="button_get_started">Empecemos</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="profile_image">Profile Image</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="country_flag">Country Flag</string>
    <string name="your_cell">Tu celular</string>
    <string name="done">Hecho</string>
    <string name="cancel">Cancelar</string>
    <string name="login_text">Inicio de sesión</string>
    <string name="login_success">Se ha logueado exitosamente</string>
    <string name="log_out">Cerrar sesión</string>
</resources>